# trivial-loop-array

./: CMakeLists.txt  README.md
include/: trivial_loop_array.hpp
test/: trivial_loop_array_test.cpp
